RESOLVED FIXED85240
ScrollingCoordinator::requestScrollPositionUpdate should not update the main frame scroll position
https://bugs.webkit.org/show_bug.cgi?id=85240
Summary ScrollingCoordinator::requestScrollPositionUpdate should not update the main ...
Anders Carlsson
Reported 2012-04-30 15:32:24 PDT
ScrollingCoordinator::requestScrollPositionUpdate should not update the main frame scroll position
Attachments
Patch (6.61 KB, patch)
2012-04-30 15:37 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-04-30 15:37:25 PDT
Anders Carlsson
Comment 2 2012-04-30 15:41:50 PDT
Note You need to log in before you can comment on or make changes to this bug.