Source/WebCore/page/scrolling/ScrollingCoordinator.cpp
@@ -224,13 +224,10 @@ bool ScrollingCoordinator::requestScrollPositionUpdate(FrameView* frameView, con
         return false;
 
 #if ENABLE(THREADED_SCROLLING)
-    // Update the main frame scroll position locally before asking the scrolling thread to scroll,
-    // since FrameView expects scroll position updates to happen synchronously.
-    updateMainFrameScrollPosition(scrollPosition);
-
     if (frameView->frame()->document()->inPageCache()) {
         // If this frame view's document is being put into the page cache, we don't want to update our
-        // main frame scroll position.
+        // main frame scroll position. Just let the FrameView think that we did.
+        updateMainFrameScrollPosition(scrollPosition);
         return true;
     }
 
